[gd_scene load_steps=8 format=3 uid="uid://bwcyi5bcf6qxb"]

[ext_resource type="Script" uid="uid://bdhslfg4nmubv" path="res://addons/quest_weaver/editor/quest_weaver_editor.gd" id="1_fkj2q"]
[ext_resource type="Script" uid="uid://uflu1xxr00rf" path="res://addons/quest_weaver/core/qw_graph_data.gd" id="2_wklog"]
[ext_resource type="PackedScene" uid="uid://can4p1dv5xuot" path="res://addons/quest_weaver/editor/side_panel.tscn" id="3_avfb5"]
[ext_resource type="Script" uid="uid://dxpamctt8bmp6" path="res://addons/quest_weaver/editor/quest_weaver_graph.gd" id="4_363a4"]
[ext_resource type="Theme" uid="uid://ccxtg65xjhu81" path="res://addons/quest_weaver/assets/themes/quest_weaver_theme.tres" id="4_wklog"]
[ext_resource type="PackedScene" uid="uid://jmguya1cwte8" path="res://addons/quest_weaver/editor/properties_panel.tscn" id="5_dumqh"]
[ext_resource type="PackedScene" uid="uid://cbxmdchmhqt23" path="res://addons/quest_weaver/editor/node_selection_menu.tscn" id="7_qsw60"]

[node name="QuestWeaverEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fkj2q")

[node name="DataManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_wklog")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="SidePanel" parent="MarginContainer/HSplitContainer/VSplitContainer" instance=ExtResource("3_avfb5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="LocalizatonButton" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Update Localization Keys"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="GraphEdit" type="GraphEdit" parent="MarginContainer/HSplitContainer/HSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
theme = ExtResource("4_wklog")
grid_pattern = 1
snapping_distance = 10
right_disconnects = true
connection_lines_curvature = 0.4
script = ExtResource("4_363a4")
metadata/_override_delete_request = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/HSplitContainer/GraphEdit"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_right = 16

[node name="VersionLabel" type="Label" parent="MarginContainer/HSplitContainer/HSplitContainer/GraphEdit/MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.313726)
layout_mode = 2
text = "v0.0.1"

[node name="PropertiesPanel" parent="MarginContainer/HSplitContainer/HSplitContainer" instance=ExtResource("5_dumqh")]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
size_flags_stretch_ratio = 2.0

[node name="Menues" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AddNodeMenu" parent="Menues" instance=ExtResource("7_qsw60")]
unique_name_in_owner = true
visible = false
